--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566979940741%22%3A%22SZsj5xMm%22%2C%2261567676760185%22%3A%22uLm1AEeQ%22%2C%2261565667807136%22%3A%22py0GfXTG%22%2C%2261567765916806%22%3A%22aAYFbIHt%22%2C%2261567581215445%22%3A%22QMIUBeoT%22%2C%2261564574314688%22%3A%22z2liloWP%22%7D",
+        "value": "%7B%2261566979940741%22%3A%22SZsj5xMm%22%2C%2261567676760185%22%3A%22uLm1AEeQ%22%2C%2261565667807136%22%3A%22py0GfXTG%22%2C%2261567765916806%22%3A%22aAYFbIHt%22%2C%2261567581215445%22%3A%22QMIUBeoT%22%2C%2261564574314688%22%3A%22NL8SjeNF%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.000Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "vpd",
@@ -59,17 +59,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
-        "key": "wd",
-        "value": "360x708",
+        "key": "m_pixel_ratio",
+        "value": "3",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "c_user",
@@ -77,43 +77,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "fr",
-        "value": "0TSnGsuYjLtj2EPgX.AWWM5iXCA7HAsXWzUQeYEEUs41I.BnG4eV..AAA.0.0.BnHu7i.AWVm-EDAlx8",
+        "value": "0TSnGsuYjLtj2EPgX.AWWlQ-YKlnbhnen2X79-LgjKeqk.BnG4eV..AAA.0.0.BnH238.AWVKEmLc59c",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "xs",
-        "value": "19%3AtpYVwX_SvzjJVA%3A2%3A1730080483%3A-1%3A14073",
+        "value": "42%3AdKyrBY-QDJkUzg%3A2%3A1730113020%3A-1%3A14073",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x708",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "fbl_st",
-        "value": "101037415%3BT%3A28835099",
+        "value": "100734357%3BT%3A28835217",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2656%3Btimestamp%3A1730105962",
+        "value": "v2%3Bclient_version%3A2656%3Btimestamp%3A1730113027",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-28T08:59:35.009Z",
-        "lastAccessed": "2024-10-28T08:59:35.009Z"
+        "creation": "2024-10-28T10:57:19.001Z",
+        "lastAccessed": "2024-10-28T10:57:19.001Z"
     }
 ]
